@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2026-02-19T13:19:04Z",
-  "count_outdated" : 10640,
-  "uniques_outdated" : 5309,
+  "timestamp" : "2026-02-21T02:28:52Z",
+  "count_outdated" : 10643,
+  "uniques_outdated" : 5312,
   "count" : 11389,
   "uniques" : 5429,
   "clones" : [
-    {
-      "timestamp": "2026-02-05T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
     {
       "timestamp": "2026-02-06T00:00:00Z",
       "count": 74,
@@ -130,6 +121,15 @@
       "uniques": 8,
       "uniques_minmax": [ 8, 8 ],
       "uniques_decinc": [ 0, 8 ]
+    },
+    {
+      "timestamp": "2026-02-19T00:00:00Z",
+      "count": 0,
+      "count_minmax": [ 0, 0 ],
+      "count_decinc": [ 0, 0 ],
+      "uniques": 0,
+      "uniques_minmax": [ 0, 0 ],
+      "uniques_decinc": [ 0, 0 ]
     }
   ]
 }
