@@ -1,12 +1,7 @@
 {
-  "count": 749,
-  "uniques": 97,
+  "count": 746,
+  "uniques": 94,
   "clones": [
-    {
-      "timestamp": "2026-02-05T00:00:00Z",
-      "count": 3,
-      "uniques": 3
-    },
     {
       "timestamp": "2026-02-06T00:00:00Z",
       "count": 74,
@@ -71,6 +66,11 @@
       "timestamp": "2026-02-18T00:00:00Z",
       "count": 70,
       "uniques": 8
+    },
+    {
+      "timestamp": "2026-02-19T00:00:00Z",
+      "count": 0,
+      "uniques": 0
     }
   ]
 }
